--- a/templates/index.html
+++ b/templates/index.html
@@ -9,57 +9,59 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="manifest" href="/static/manifest.webmanifest">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-        <!--<link href="/static/index.css" rel="stylesheet">-->
+        <link href="/static/index.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Kadenz Generator</h1>
-        <p>Taktart</p>
-        <select class="selectpicker" data-style="btn-secondary">
-                <option selected>Zufällig</option>
-                <option>4/4</option>
-                <option>2/4</option>
-                <option>6/8</option>
-        </select>
-        <p>Tonart</p>
-        <select class="selectpicker" data-style="btn-secondary">
-                <option selected>Zufällig</option>
-                <option>Dur</option>
-                <option>Moll</option>
-        </select>
-        <p>Ton</p>
-        <select class="selectpicker" data-style="btn-secondary">
-                <option selected>Zufällig</option>
-                <option>C</option>
-                <option>Cis</option>
-                <option>D</option>
-                <option>Es</option>
-                <option>E</option>
-                <option>F</option>
-                <option>Fis</option>
-                <option>G</option>
-                <option>Gis</option>
-                <option>A</option>
-                <option>B</option>
-                <option>H</option>
-        </select>
-        <p>Tonika-Option</p>
-        <select class="selectpicker" data-style="btn-secondary">
-                <option selected>Zufällig</option>
-                <option>Anfang</option>
-                <option>Ende</option>
-                <option>Anfang und Ende</option>
-        </select>
-        <p>Kadenzlänge</p>
-        <select class="selectpicker" data-style="btn-secondary">
-                <option selected>Zufällig</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-        </select>
-        <br>
-        <button type="button" class="btn btn-success">Generieren</button>
+        <div class="text-center index-class">
+                <h1 style="margin-bottom: 1rem; font-size: 2.25rem;">Kadenz Generator</h1>
+                <p class="margin-bottom-zero" style="font-weight: bold;">Taktart</p>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
+                        <option selected>Zufällig</option>
+                        <option>4/4</option>
+                        <option>2/4</option>
+                        <option>6/8</option>
+                </select>
+                <p class="margin-bottom-zero" style="font-weight: bold;">Tonart</p>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
+                        <option selected>Zufällig</option>
+                        <option>Dur</option>
+                        <option>Moll</option>
+                </select>
+                <p class="margin-bottom-zero" style="font-weight: bold;">Ton</p>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
+                        <option selected>Zufällig</option>
+                        <option>C</option>
+                        <option>Cis</option>
+                        <option>D</option>
+                        <option>Es</option>
+                        <option>E</option>
+                        <option>F</option>
+                        <option>Fis</option>
+                        <option>G</option>
+                        <option>Gis</option>
+                        <option>A</option>
+                        <option>B</option>
+                        <option>H</option>
+                </select>
+                <p class="margin-bottom-zero" style="font-weight: bold;">Tonika-Option</p>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
+                        <option selected>Zufällig</option>
+                        <option>Anfang</option>
+                        <option>Ende</option>
+                        <option>Anfang und Ende</option>
+                </select>
+                <p class="margin-bottom-zero" style="font-weight: bold;">Kadenzlänge</p>
+                <select class="selectpicker" data-style="btn-secondary">
+                        <option selected>Zufällig</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                </select>
+                <br>
+                <button type="button" class="btn btn-success" style="margin-top: 1.5rem;">Generieren</button>
+        </div>
 
         
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
