--- a/templates/index.html
+++ b/templates/index.html
@@ -13,54 +13,56 @@
     </head>
     <body>
         <div class="text-center index-class">
-                <h1 style="margin-bottom: 1rem; font-size: 2.25rem;">Kadenz Generator</h1>
+                <h1 style="margin-bottom: 1rem; font-size: 2.25rem; font-weight: 600;">Kadenz Generator</h1>
                 <p class="margin-bottom-zero" style="font-weight: bold;">Taktart</p>
-                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
-                        <option selected>Zufällig</option>
-                        <option>4/4</option>
-                        <option>2/4</option>
-                        <option>6/8</option>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary" id="Takt" size="3">
+                        <option value="1" selected>Zufällig</option>
+                        <option value="2">4/4</option>
+                        <option value="3">2/4</option>
+                        <option value="4">6/8</option>
                 </select>
                 <p class="margin-bottom-zero" style="font-weight: bold;">Tonart</p>
-                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
-                        <option selected>Zufällig</option>
-                        <option>Dur</option>
-                        <option>Moll</option>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary" id="Tonart" size="2">
+                        <option value="1" selected>Zufällig</option>
+                        <option value="2">Dur</option>
+                        <option value="3">Moll</option>
                 </select>
                 <p class="margin-bottom-zero" style="font-weight: bold;">Ton</p>
-                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
-                        <option selected>Zufällig</option>
-                        <option>C</option>
-                        <option>Cis</option>
-                        <option>D</option>
-                        <option>Es</option>
-                        <option>E</option>
-                        <option>F</option>
-                        <option>Fis</option>
-                        <option>G</option>
-                        <option>Gis</option>
-                        <option>A</option>
-                        <option>B</option>
-                        <option>H</option>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary" id="Ton" size="12">
+                        <option value="1" selected>Zufällig</option>
+                        <option value="2">C</option>
+                        <option value="3">Cis</option>
+                        <option value="4">D</option>
+                        <option value="5">Es</option>
+                        <option value="6">E</option>
+                        <option value="7">F</option>
+                        <option value="8">Fis</option>
+                        <option value="9">G</option>
+                        <option value="10">Gis</option>
+                        <option value="11">A</option>
+                        <option value="12">B</option>
+                        <option value="13">H</option>
                 </select>
                 <p class="margin-bottom-zero" style="font-weight: bold;">Tonika-Option</p>
-                <select class="selectpicker margin-bottom-one" data-style="btn-secondary">
-                        <option selected>Zufällig</option>
-                        <option>Anfang</option>
-                        <option>Ende</option>
-                        <option>Anfang und Ende</option>
+                <select class="selectpicker margin-bottom-one" data-style="btn-secondary" id="Tonika" size="3">
+                        <option value="1" selected>Zufällig</option>
+                        <option value="2">Anfang</option>
+                        <option value="3">Ende</option>
+                        <option value="4">Anfang und Ende</option>
                 </select>
                 <p class="margin-bottom-zero" style="font-weight: bold;">Kadenzlänge</p>
-                <select class="selectpicker" data-style="btn-secondary">
-                        <option selected>Zufällig</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                <select class="selectpicker" data-style="btn-secondary" id="Kadenzlänge" size="5">
+                        <option value="1" selected>Zufällig</option>
+                        <option value="2">1</option>
+                        <option value="3">2</option>
+                        <option value="4">3</option>
+                        <option value="5">4</option>
+                        <option value="6">5</option>
                 </select>
                 <br>
-                <button type="button" class="btn btn-success" style="margin-top: 1.5rem;">Generieren</button>
+                <button onclick="generiereKadenz();" type="button" class="btn btn-success" style="margin-top: 1.5rem;">Generieren</button>
+                <p style="font-weight: bold; margin-top: 2rem; margin-bottom: 0.5rem; font-size: 1.75rem;" id="TaktundTon"></p>
+                <p style="font-weight: bold; font-size: 1.75rem;" id="Kadenz"></p>
         </div>
 
         
@@ -68,6 +70,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-        <!--<script src="/static/index.js"></script>-->
+        <script src="/static/index.js"></script>
     </body>
 </html>
