--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+        <link rel="icon" type="image/png"  href="/static/favicon_kadenz.png">
+
+        <link rel="apple-touch-icon" sizes="72x72" href="/static/icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="96x96" href="/static/icon-96x96.png">
+        <link rel="apple-touch-icon" sizes="128x128" href="/static/icon-128x128.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/static/icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/static/icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="192x192" href="/static/icon-192x192.png">
+        <link rel="apple-touch-icon" sizes="384x384" href="/static/icon-384x384.png">
+        <link rel="apple-touch-icon" sizes="512x512" href="/static/icon-512x512.png">
+
         <link rel="manifest" href="/static/manifest.webmanifest">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
         <link href="/static/index.css" rel="stylesheet">
@@ -61,7 +73,7 @@
                 </select>
                 <br>
                 <button onclick="generiereKadenz();" type="button" class="btn btn-success" style="margin-top: 1.5rem;">Generieren</button>
-                <p style="font-weight: bold; margin-top: 2rem; margin-bottom: 0.5rem; font-size: 1.75rem;" id="TaktundTon"></p>
+                <p style="font-weight: bold; margin-top: 1.75rem; margin-bottom: 0.5rem; font-size: 1.75rem;" id="TaktundTon"></p>
                 <p style="font-weight: bold; font-size: 1.75rem;" id="Kadenz"></p>
         </div>
 
